--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <h3>
               Fill out the form and we'll be in touch as soon as possible
             </h3>
-            <form action="https://formsubmit.co/jeffmoromusic@gmail.com" method="POST" class="mt-20">
+            <form action="https://formsubmit.co/el/lokudi" method="POST">
               <label for="firstName">Full Name</label>
               <input
                 class="input-field"
