--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
       </section>
     </div>
-<div id="skills"></div>
+    <div id="skills"></div>
     <section
       class="skills section-container section-background from-back"
       data-aos="fade-down"
@@ -120,7 +120,6 @@
     <section
       class="portfolio section-container section-background from-back"
       data-aos="fade-down"
-      
     >
       <div class="portfolio-content">
         <div class="portfolio-title flex-align-center gap-10">
@@ -130,14 +129,13 @@
 
         <div class="portfolio-info flex-align-center">
           <div class="featured-card">
-            
             <a href="https://retro-nome.vercel.app/" target="_blank">
               <div class="featured-card-header">
-              <h1>Featured</h1>
+                <h1>Featured</h1>
 
-              <h2>RetroNome</h2>
-              <p>A simple metronome for musicians to practice with.</p>
-            </div>
+                <h2>RetroNome</h2>
+                <p>A simple metronome for musicians to practice with.</p>
+              </div>
               <img src="./assets/RetroNome.png" alt="RetroNome" />
             </a>
           </div>
@@ -180,7 +178,11 @@
               >
                 <div class="grid-item-content">
                   <h2>Feed Your Head</h2>
-                  <img src="./assets/feed-your-head.png" alt="logo" id="feedYourHead"/>
+                  <img
+                    src="./assets/feed-your-head.png"
+                    alt="logo"
+                    id="feedYourHead"
+                  />
                 </div>
               </a>
             </div>
@@ -200,12 +202,10 @@
             <img src="./assets/github (1).svg" alt="GitHub" />
           </a>
         </div>
-         <div class="form">
+        <div class="form">
           <div class="form-container">
-            <h3>
-              Fill out the form and we'll be in touch as soon as possible
-            </h3>
-            <form action="https://formsubmit.co/el/lokudi" method="POST">
+            <h3>Fill out the form and we'll be in touch as soon as possible</h3>
+            <form action="https://formspree.io/f/xkndgbna" method="POST">
               <label for="firstName">Full Name</label>
               <input
                 class="input-field"
@@ -233,15 +233,11 @@
                 placeholder="Tell me more about your project, needs, and timeline."
               ></textarea>
               <div class="submit-area">
-                <input
-                  class="button"
-                  type="button"
-                  value="Send"
-                />
+                <input class="button" type="button" value="Send" />
               </div>
             </form>
           </div>
-        </div> 
+        </div>
       </div>
     </footer>
 
