fix footer. add card

--- a/index.html
+++ b/index.html
@@ -232,6 +232,17 @@
             </form>
           </div>
         </div>
+        <div class="btm-card flex-align-center">
+          <div class="btm-card-inner">
+            <a href="#" target="_blank">
+              <div class="btm-card-header">
+                <h1>Jeff is also a musician!</h1>
+
+                <h2>Click this card to see his work.</h2>
+              </div>
+              <img src="./assets/IMG_9235.JPG" alt="RetroNome" />
+            </a>
+          </div>
       </div>
     </footer>
     <section class="footers-footer">
