--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <span class="hamburger">&#9776;</span>
           </button>
           <div class="nav-container">
-            <ul class="navbar-nav blur" id="navbarList">
+            <ul class="navbar-nav from-back" id="navbarList">
               <li class="nav-link"><a href="#home">Home</a></li>
               <li class="nav-link"><a href="#skills">Skills</a></li>
               <li class="nav-link"><a href="#portfolio">Portfolio</a></li>
