--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./default.css" />
     <link rel="stylesheet" href="./styles.css" />
     <link rel="stylesheet" href="./responsive.css" />
+    <link rel="icon" type="image/x-icon" href="/assets/applications-development-web.svg">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
