--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         </div>
         <div class="btm-card flex-align-center">
           <div class="btm-card-inner">
-            <a href="#" target="_blank">
+            <a href="https://www.jeffmoromusicandaudio.com/" target="_blank">
               <div class="btm-card-header">
                 <h1>Jeff is also a musician!</h1>
 
