fixed resume issue

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
       </div>
       <div class="button-container">
         <button>
-          <a href="./assets/Jeff Moro Web Dev resume.pdf" download>
-            Download Jeff's Resume
+          <a target="_blank" href="https://docs.google.com/document/d/1LKrsyAXJEAU945qkJyWLn6TWOqp_f9r6dYiQRDMr7Bw/edit?usp=sharing">
+            See Jeff's Resume
           </a>
         </button>
       </div>
