work on media queries with articles section

--- a/index.html
+++ b/index.html
@@ -148,14 +148,23 @@
             href="https://medium.com/@jeffmoromusic/using-css-grid-feef88d1774c"
           >
             <li class="articles-list-grid-item">
-              Using Percentage for CSS Grid
+              Percentages for CSS Grid
               <img src="./assets/thumbnailGRID.png" alt="thumbnail image" />
+            </li>
+          </a>
+          <a
+            target="_blank"
+            href="https://medium.com/@jeffmoromusic/coding-with-adhd-c6cddd4dc528"
+          >
+            <li class="articles-list-grid-item">
+              Coding with ADHD
+              <img src="./assets/thumbnailADHD.png" alt="thumbnail image" />
             </li>
           </a>
 
           <a class="articles-list-grid-item articles-grid-footer more-to-come"  target="_blank" href="https://medium.com/@jeffmoromusic">
             <li>
-              More to come: follow Jeff on Medium.
+              More to come follow Jeff on Medium
             </li>
           </a>
         </ul>
