--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
             </a>
           </div>
 
-          <div class="portfolio-grid gap-10">
-            <div class="portfolio-grid-item">
+          <div class="portfolio-grid">
+            <div class="portfolio-grid-item emmas">
               <a href="https://www.emmas-bbq.com/" target="_blank">
                 <div class="grid-item-content">
                   <h2>Emma's BBQ</h2>
@@ -205,7 +205,7 @@
               </a>
             </div>
 
-            <div class="portfolio-grid-item">
+            <div class="portfolio-grid-item saas">
               <a
                 href="https://saas-landing-page-omega.vercel.app/"
                 target="_blank"
@@ -217,30 +217,7 @@
               </a>
             </div>
 
-            <div class="portfolio-grid-item">
-              <a href="https://code-rad-bice.vercel.app/" target="_blank">
-                <div class="grid-item-content">
-                  <h2>Code Rad</h2>
-                  <img src="./assets/coderad.png" alt="logo" />
-                </div>
-              </a>
-            </div>
 
-            <div class="portfolio-grid-item">
-              <a
-                href="https://feed-your-head-delta.vercel.app/"
-                target="_blank"
-              >
-                <div class="grid-item-content">
-                  <h2>Feed Your Head</h2>
-                  <img
-                    src="./assets/feed-your-head.png"
-                    alt="logo"
-                    id="feedYourHead"
-                  />
-                </div>
-              </a>
-            </div>
           </div>
         </div>
       </div>
