fix nav menu bug

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="top-section section-container section-background" id="home">
-      <header class="page-header" id="topNav" data-aos="fade-down">
+      <header class="page-header" id="topNav">
         <div class="logo-container">
           <img src="./assets/tape.svg" alt="Front logo" />
         </div>
@@ -67,9 +67,7 @@
     </div>
     <div id="skills"></div>
     <section
-      class="skills section-container section-background from-back"
-      data-aos="fade-down"
-    >
+      class="skills section-container section-background from-back">
       <div class="skills-title flex-align-center gap-10">
         <h1>Skills</h1>
         <p>
@@ -124,9 +122,7 @@
 
     <div id="articles"></div>
     <section
-      class="articles section-container section-background from-back"
-      data-aos="fade-down"
-    >
+      class="articles section-container section-background from-back">
       <div class="articles-title flex-align-center gap-10">
         <h1>Medium Articles</h1>
         <p>
